--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Ignore node_modules from both server and client
+# Ignore node_modules from both client and server
 client/node_modules/
 server/node_modules/
 
@@ -6,9 +6,9 @@ server/node_modules/
 client/dist/
 server/dist/
 
-# Ignore environment variables
+# Ignore environment variables in any folder
 **/.env
 
-# OS files
+# OS-specific system files
 .DS_Store
 Thumbs.db
