--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.18",
+    "@types/pg": "^8.15.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
